Refactor tests and cleanup across modules
Parameterize renderer/datamodel tests, replace sleep with Awaitility, and move RequestUserUtil tests to Mockito; update related security configs and exception handling, tweak selenium helpers and analytics ordering, and add Awaitility/Mockito dependencies.